--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.37"
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3"
   }
 }
