--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "testExample": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
